--- a/week1/templates/display_results.jinja2
+++ b/week1/templates/display_results.jinja2
@@ -3,26 +3,26 @@
     <div class="search-result search-result-{{ loop.cycle('odd', 'even') }}">
       <div class="search-result-name">{#do we have a highlight?#}
         {% if hit.highlight and hit.highlight.name %}
-          {{ hit.highlight.name[0] }}
+          {{ hit.highlight.name }}
         {% else%}
-          {{ hit._source.name[0] }}
+          {{ hit._source.name }}
         {% endif %}
       </div>
-      <div><span class="search-result-header">ID</span>: {{ hit._source.productId[0] }}</div>
+      <div><span class="search-result-header">ID</span>: {{ hit._source.productId }}</div>
       <div><span class="search-result-header">Description</span>:
         {% if hit._source.longDescription %}
           {#do we have a highlight?#}
           {% if hit.highlight and hit.highlight.longDescription %}
-            {{ hit.highlight.longDescription[0] }}
+            {{ hit.highlight.longDescription }}
           {% else %}
-            {{ hit._source.longDescription[0] }}
+            {{ hit._source.longDescription }}
           {% endif %}
         {% elif hit._source.shortDescription %}
           {#do we have a highlight?#}
           {% if hit.highlight and hit.highlight.shortDescription %}
             {{ hit.highlight.shortDescription }}
           {% else %}
-            {{ hit._source.shortDescription[0] }}
+            {{ hit._source.shortDescription }}
           {% endif %}
         {% endif %}
       </div>
